--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -37,7 +37,8 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload entire repository
-          path: 'https://github.com/JacobFullerOBU/card-site-2023'
+          
+          path: "C:\Users\Union\Card Project\card-site-2023"
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
